doc: move back to Doxygen 1.9.8

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -3,7 +3,7 @@ PROJECT_NAME           = OpenCV
 PROJECT_NUMBER         = @OPENCV_VERSION@
 PROJECT_BRIEF          = "Open Source Computer Vision"
 PROJECT_LOGO           = @CMAKE_CURRENT_SOURCE_DIR@/opencv-logo-small.png
-PROJECT_ICON           =
+#PROJECT_ICON           =
 OUTPUT_DIRECTORY       = @CMAKE_DOXYGEN_OUTPUT_PATH@
 CREATE_SUBDIRS         = YES
 CREATE_SUBDIRS_LEVEL   = 8
@@ -166,8 +166,8 @@ HTML_COLORSTYLE_GAMMA  = 80
 HTML_DYNAMIC_MENUS     = YES
 HTML_DYNAMIC_SECTIONS  = NO
 HTML_CODE_FOLDING      = YES
-HTML_COPY_CLIPBOARD    = YES
-HTML_PROJECT_COOKIE    =
+#HTML_COPY_CLIPBOARD    = YES
+#HTML_PROJECT_COOKIE    =
 HTML_INDEX_NUM_ENTRIES = 100
 GENERATE_DOCSET        = NO
 DOCSET_FEEDNAME        = "Doxygen generated docs"
