--- a/3rdparty/libtiff/tiffconf.h.in
+++ b/3rdparty/libtiff/tiffconf.h.in
@@ -20,37 +20,37 @@
 
 
 /* Signed 16-bit type */
-#define TIFF_INT16_T @TIFF_INT16_T@
+#undef TIFF_INT16_T
 
 /* Signed 32-bit type */
-#define TIFF_INT32_T @TIFF_INT32_T@
+#undef TIFF_INT32_T
 
 /* Signed 64-bit type */
-#define TIFF_INT64_T @TIFF_INT64_T@
+#undef TIFF_INT64_T
 
 /* Signed 8-bit type */
-#define TIFF_INT8_T @TIFF_INT8_T@
+#undef TIFF_INT8_T
 
 /* Unsigned 16-bit type */
-#define TIFF_UINT16_T @TIFF_UINT16_T@
+#undef TIFF_UINT16_T
 
 /* Unsigned 32-bit type */
-#define TIFF_UINT32_T @TIFF_UINT32_T@
+#undef TIFF_UINT32_T
 
 /* Unsigned 64-bit type */
-#define TIFF_UINT64_T @TIFF_UINT64_T@
+#undef TIFF_UINT64_T
 
 /* Unsigned 8-bit type */
-#define TIFF_UINT8_T @TIFF_UINT8_T@
+#undef TIFF_UINT8_T
 
 /* Signed size type */
-#define TIFF_SSIZE_T @TIFF_SSIZE_T@
+#undef TIFF_SSIZE_T
 
 /* Compatibility stuff. */
 
 /* Define as 0 or 1 according to the floating point format supported by the
    machine */
-#cmakedefine HAVE_IEEEFP 1
+#undef HAVE_IEEEFP
 
 /* The concept of HOST_FILLORDER is broken. Since libtiff 4.5.1
  * this macro will always be hardcoded to FILLORDER_LSB2MSB on all
@@ -66,66 +66,66 @@
 
 /* Native cpu byte order: 1 if big-endian (Motorola) or 0 if little-endian
    (Intel) */
-#define HOST_BIGENDIAN @HOST_BIG_ENDIAN@
+#undef HOST_BIGENDIAN
 
 /* Support CCITT Group 3 & 4 algorithms */
-#cmakedefine CCITT_SUPPORT 1
+#undef CCITT_SUPPORT
 
 /* Support JPEG compression (requires IJG JPEG library) */
-#cmakedefine JPEG_SUPPORT 1
+#undef JPEG_SUPPORT
 
 /* Support JBIG compression (requires JBIG-KIT library) */
-#cmakedefine JBIG_SUPPORT
+#undef JBIG_SUPPORT
 
 /* Support LERC compression */
-#cmakedefine LERC_SUPPORT 1
+#undef LERC_SUPPORT
 
 /* Support LogLuv high dynamic range encoding */
-#cmakedefine LOGLUV_SUPPORT 1
+#undef LOGLUV_SUPPORT
 
 /* Support LZW algorithm */
-#cmakedefine LZW_SUPPORT 1
+#undef LZW_SUPPORT
 
 /* Support NeXT 2-bit RLE algorithm */
-#cmakedefine NEXT_SUPPORT 1
+#undef NEXT_SUPPORT
 
 /* Support Old JPEG compresson (read contrib/ojpeg/README first! Compilation
    fails with unpatched IJG JPEG library) */
-#cmakedefine OJPEG_SUPPORT 1
+#undef OJPEG_SUPPORT
 
 /* Support Macintosh PackBits algorithm */
-#cmakedefine PACKBITS_SUPPORT 1
+#undef PACKBITS_SUPPORT
 
 /* Support Pixar log-format algorithm (requires Zlib) */
-#cmakedefine PIXARLOG_SUPPORT 1
+#undef PIXARLOG_SUPPORT
 
 /* Support ThunderScan 4-bit RLE algorithm */
-#cmakedefine THUNDER_SUPPORT 1
+#undef THUNDER_SUPPORT
 
 /* Support Deflate compression */
-#cmakedefine ZIP_SUPPORT 1
+#undef ZIP_SUPPORT
 
 /* Support libdeflate enhanced compression */
-#cmakedefine LIBDEFLATE_SUPPORT 1
+#undef LIBDEFLATE_SUPPORT
 
 /* Support strip chopping (whether or not to convert single-strip uncompressed
    images to multiple strips of ~8Kb to reduce memory usage) */
-#cmakedefine STRIPCHOP_DEFAULT TIFF_STRIPCHOP
+#undef STRIPCHOP_DEFAULT
 
 /* Enable SubIFD tag (330) support */
-#cmakedefine SUBIFD_SUPPORT 1
+#undef SUBIFD_SUPPORT
 
 /* Treat extra sample as alpha (default enabled). The RGBA interface will
    treat a fourth sample with no EXTRASAMPLE_ value as being ASSOCALPHA. Many
    packages produce RGBA files but don't mark the alpha properly. */
-#cmakedefine DEFAULT_EXTRASAMPLE_AS_ALPHA 1
+#undef DEFAULT_EXTRASAMPLE_AS_ALPHA
 
 /* Pick up YCbCr subsampling info from the JPEG data stream to support files
    lacking the tag (default enabled). */
-#cmakedefine CHECK_JPEG_YCBCR_SUBSAMPLING 1
+#undef CHECK_JPEG_YCBCR_SUBSAMPLING
 
 /* Support MS MDI magic number files as TIFF */
-#cmakedefine MDI_SUPPORT 1
+#undef MDI_SUPPORT
 
 /*
  * Feature support definitions.
