--- a/samples/dnn/models.yml
+++ b/samples/dnn/models.yml
@@ -34,6 +34,36 @@ yolov8x:
   background_label_id: 0
   sample: "yolo_detector"
 
+yolov8s:
+  load_info:
+    url: "https://huggingface.co/cabelo/yolov8/resolve/main/yolov8s.onnx?download=true"
+    sha1: "2955447f21227398c9bf85cb448216cf429075ec"
+  model: "yolov8s.onnx"
+  mean: 0.0
+  scale: 0.00392
+  width: 640
+  height: 640
+  rgb: true
+  classes: "object_detection_classes_yolo.txt"
+  background_label_id: 0
+  sample: "yolo_detector"
+
+yolov8n:
+  load_info:
+    url: "https://huggingface.co/cabelo/yolov8/resolve/main/yolov8n.onnx?download=true"
+    sha1: "832c2ce94fe7e51c6bcf95c1add9095d54a59361"
+  model: "yolov8n.onnx"
+  mean: 0.0
+  scale: 0.00392
+  width: 640
+  height: 640
+  rgb: true
+  classes: "object_detection_classes_yolo.txt"
+  background_label_id: 0
+  sample: "yolo_detector"
+
+
+
 # YOLO4 object detection family from Darknet (https://github.com/AlexeyAB/darknet)
 # YOLO object detection family from Darknet (https://pjreddie.com/darknet/yolo/)
 # Might be used for all YOLOv2, TinyYolov2, YOLOv3, YOLOv4 and TinyYolov4
