--- a/cmake/templates/xcode-launch-c.in
+++ b/cmake/templates/xcode-launch-c.in
@@ -7,5 +7,5 @@ if [[ "$1" = "${CMAKE_C_COMPILER}" ]] ; then
     shift
 fi
 
-export CCACHE_CPP2=true
+export CCACHE_CPP2=false
 exec "${CCACHE_PROGRAM}" "${CMAKE_C_COMPILER}" "$@"
