3rdparty: tiff: show built-in libtiff version

--- a/3rdparty/libtiff/CMakeLists.txt
+++ b/3rdparty/libtiff/CMakeLists.txt
@@ -428,7 +428,7 @@ set(lib_srcs
     tiff.h
     tiffio.h
     tiffiop.h
-    tiffvers.h
+    "${CMAKE_CURRENT_BINARY_DIR}/tiffvers.h"
     uvcode.h
     tiffio.hxx
     "${CMAKE_CURRENT_BINARY_DIR}/tif_config.h"
