added hal for cv_hal_cvtBGRtoBGR rvv 0.7.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,6 +265,8 @@ OCV_OPTION(WITH_KLEIDICV "Use KleidiCV library for ARM platforms" OFF
   VISIBLE_IF (AARCH64 AND (ANDROID OR UNIX AND NOT IOS AND NOT XROS)))
 OCV_OPTION(WITH_NDSRVP "Use Andes RVP extension" (NOT CV_DISABLE_OPTIMIZATION)
   VISIBLE_IF RISCV)
+OCV_OPTION(WITH_HALRVV071 "Use rvv 0.7.1 optimizations" (NOT CV_DISABLE_OPTIMIZATION)
+  VISIBLE_IF RISCV)
 OCV_OPTION(WITH_CPUFEATURES "Use cpufeatures Android library" ON
   VISIBLE_IF ANDROID
   VERIFY HAVE_CPUFEATURES)
@@ -994,6 +996,13 @@ if(WITH_NDSRVP)
   endif()
 endif()
 
+if(WITH_HALRVV071)
+  ocv_debug_message(STATUS "Enable rvv 0.7.1 acceleration")
+  if(NOT ";${OpenCV_HAL};" MATCHES ";halrvv071;")
+    set(OpenCV_HAL "halrvv071;${OpenCV_HAL}")
+  endif()
+endif()
+
 foreach(hal ${OpenCV_HAL})
   if(hal STREQUAL "carotene")
     if(";${CPU_BASELINE_FINAL};" MATCHES ";NEON;")
@@ -1022,6 +1031,15 @@ foreach(hal ${OpenCV_HAL})
       list(APPEND OpenCV_USED_HAL "ndsrvp (ver ${NDSRVP_HAL_VERSION})")
     else()
       message(STATUS "NDSRVP: Andes GNU Toolchain DSP extension is not open, disabling ndsrvp...")
+    endif()
+  elseif(hal STREQUAL "halrvv071")
+    #if(CMAKE_C_FLAGS MATCHES "-march=rv64imafdcv0p7xthead -mabi=lp64d" AND CMAKE_CXX_FLAGS MATCHES "-march=rv64imafdcv0p7xthead -mabi=lp64d" AND ";${CPU_BASELINE_FINAL};" MATCHES ";RVV;")
+    if(";${CPU_BASELINE_FINAL};" MATCHES ";RVV;")
+      add_subdirectory(3rdparty/halrvv071)
+      ocv_hal_register(HALRVV071_HAL_LIBRARIES HALRVV071_HAL_HEADERS HALRVV071_HAL_INCLUDE_DIRS)
+      list(APPEND OpenCV_USED_HAL "halrvv071 (ver ${HALRVV071_HAL_VERSION})")
+    else()
+      message(STATUS "halrvv071: RVV is not available, disabling halrvv071")
     endif()
   elseif(hal STREQUAL "openvx")
     add_subdirectory(3rdparty/openvx)
