The library has been moved from cpp to hpp. Build fixed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -997,7 +997,7 @@ if(WITH_NDSRVP)
 endif()
 
 if(WITH_HALRVV071)
-  ocv_debug_message(STATUS "Enable rvv 0.7.1 acceleration")
+  ocv_debug_message(STATUS "Enable hal rvv 0.7.1 acceleration")
   if(NOT ";${OpenCV_HAL};" MATCHES ";halrvv071;")
     set(OpenCV_HAL "halrvv071;${OpenCV_HAL}")
   endif()
@@ -1033,13 +1033,12 @@ foreach(hal ${OpenCV_HAL})
       message(STATUS "NDSRVP: Andes GNU Toolchain DSP extension is not open, disabling ndsrvp...")
     endif()
   elseif(hal STREQUAL "halrvv071")
-    #if(CMAKE_C_FLAGS MATCHES "-march=rv64imafdcv0p7xthead -mabi=lp64d" AND CMAKE_CXX_FLAGS MATCHES "-march=rv64imafdcv0p7xthead -mabi=lp64d" AND ";${CPU_BASELINE_FINAL};" MATCHES ";RVV;")
-    if(";${CPU_BASELINE_FINAL};" MATCHES ";RVV;")
-      add_subdirectory(3rdparty/halrvv071)
+    if(CV_GCC)
+      add_subdirectory(3rdparty/halrvv/rvv071)
       ocv_hal_register(HALRVV071_HAL_LIBRARIES HALRVV071_HAL_HEADERS HALRVV071_HAL_INCLUDE_DIRS)
       list(APPEND OpenCV_USED_HAL "halrvv071 (ver ${HALRVV071_HAL_VERSION})")
     else()
-      message(STATUS "halrvv071: RVV is not available, disabling halrvv071")
+      message(STATUS "halrvv071: GCC is not available, disabling halrvv071")
     endif()
   elseif(hal STREQUAL "openvx")
     add_subdirectory(3rdparty/openvx)
