--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -996,10 +996,10 @@ if(WITH_NDSRVP)
   endif()
 endif()
 
-if(WITH_HALRVV071)
-  ocv_debug_message(STATUS "Enable hal rvv 0.7.1 acceleration")
-  if(NOT ";${OpenCV_HAL};" MATCHES ";halrvv071;")
-    set(OpenCV_HAL "halrvv071;${OpenCV_HAL}")
+if(WITH_HAL_RVV)
+  ocv_debug_message(STATUS "Enable HAL RVV acceleration")
+  if(NOT ";${OpenCV_HAL};" MATCHES ";halrvv;")
+    set(OpenCV_HAL "halrvv;${OpenCV_HAL}")
   endif()
 endif()
 
@@ -1033,12 +1033,13 @@ foreach(hal ${OpenCV_HAL})
       message(STATUS "NDSRVP: Andes GNU Toolchain DSP extension is not open, disabling ndsrvp...")
     endif()
   elseif(hal STREQUAL "halrvv071")
+  elseif(hal STREQUAL "halrvv")
     if(CV_GCC)
-      add_subdirectory(3rdparty/halrvv/rvv071)
-      ocv_hal_register(HALRVV071_HAL_LIBRARIES HALRVV071_HAL_HEADERS HALRVV071_HAL_INCLUDE_DIRS)
-      list(APPEND OpenCV_USED_HAL "halrvv071 (ver ${HALRVV071_HAL_VERSION})")
+      add_subdirectory(3rdparty/hal_rvv/)
+      ocv_hal_register(RVV_HAL_LIBRARIES RVV_HAL_HEADERS RVV_HAL_INCLUDE_DIRS)
+      list(APPEND OpenCV_USED_HAL "HAL RVV (ver ${RVV_HAL_VERSION})")
     else()
-      message(STATUS "halrvv071: GCC is not available, disabling halrvv071")
+      message(STATUS "halrvv: GCC is not available, disabling HAL RVV")
     endif()
   elseif(hal STREQUAL "openvx")
     add_subdirectory(3rdparty/openvx)
