--- a/samples/dnn/models.yml
+++ b/samples/dnn/models.yml
@@ -223,3 +223,32 @@ fcnresnet101:
   height: 500
   rgb: false
   sample: "segmentation"
+
+################################################################################
+# Text detection models.
+################################################################################
+
+DB:
+  load_info:
+    url: "https://drive.google.com/uc?export=dowload&id=19YWhArrNccaoSza0CfkXlA8im4-lAGsR"
+    sha1: "1b4dd21a6baa5e3523156776970895bd3db6960a"
+  model: "DB_TD500_resnet50.onnx"
+  mean: [122.67891434, 116.66876762, 104.00698793]
+  scale: 0.00392
+  width: 736
+  height: 736
+  rgb: false
+  sample: "text_detection"
+
+
+East:
+  load_info:
+    url: "https://www.dropbox.com/s/r2ingd0l3zt8hxs/frozen_east_text_detection.tar.gz?dl=1"
+    sha1: "fffabf5ac36f37bddf68e34e84b45f5c4247ed06"
+  model: "frozen_east_text_detection.pb"
+  mean: [123.68, 116.78, 103.94]
+  scale: 0.00392
+  width: 736
+  height: 736
+  rgb: false
+  sample: "text_detection"
