code refactoring: renaming variables, stdout -> OpenCV LOG system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -304,10 +304,9 @@ OCV_OPTION(WITH_GTK "Include GTK support" ON
 OCV_OPTION(WITH_GTK_2_X "Use GTK version 2" OFF
   VISIBLE_IF UNIX AND NOT APPLE AND NOT ANDROID
   VERIFY HAVE_GTK AND NOT HAVE_GTK3)
-
 OCV_OPTION(WITH_FRAMEBUFFER "Include framebuffer support" OFF
-  VISIBLE_IF UNIX VERIFY HAVE_FRAMEBUFFER)
-  
+  VISIBLE_IF UNIX AND NOT APPLE AND NOT ANDROID
+  VERIFY HAVE_FRAMEBUFFER)
 OCV_OPTION(WITH_WAYLAND "Include Wayland support" OFF
         VISIBLE_IF UNIX AND NOT APPLE AND NOT ANDROID
         VERIFY HAVE_WAYLAND)
@@ -1451,6 +1450,10 @@ if(WITH_GTK OR HAVE_GTK)
     status(  "      GThread :" HAVE_GTHREAD THEN "YES (ver ${GTHREAD_VERSION})" ELSE NO)
     status(  "      GtkGlExt:" HAVE_GTKGLEXT THEN "YES (ver ${GTKGLEXT_VERSION})" ELSE NO)
   endif()
+endif()
+
+if(WITH_FRAMEBUFFER OR HAVE_FRAMEBUFFER)
+  status("    Framebuffer UI:" "YES")
 endif()
 
 if(WITH_OPENGL OR HAVE_OPENGL)
