--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1473,7 +1473,7 @@ if(WITH_SPNG)
   endif()
 elseif(WITH_PNG OR HAVE_PNG)
   status("    PNG:"  PNG_FOUND  THEN "${PNG_LIBRARY} (ver ${PNG_VERSION_STRING})" ELSE "build (ver ${PNG_VERSION_STRING})")
-  if(PNG_HARDWARE_OPTIMIZATIONS)
+  if(BUILD_PNG AND PNG_HARDWARE_OPTIMIZATIONS)
     status("      SIMD Support Request:" "YES")
     if(PNG_INTEL_SSE)
     status("      SIMD Support:" "YES (Intel SSE)")
